tests/diagnostics/user_main.stderr
error[E0291]: main は予約語です (プログラムのエントリポイントはトップレベルの式です)
 --> tests/diagnostics/user_main.kal:2:4
  |
2 | fn main() -> i64 = 0;
  |    ^^^^
1 個のエラーで中断しました
