tests/diagnostics/user_main.kal
# `main` is reserved (it collides with the AOT C entry point).
fn main() -> i64 = 0;
printi(main());
